# xcfg

./: .gitignore  CHANGELOG.md  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  release.yml
just/: dev.just  qa.just  release.just
resources/skills/use-xcfg/: SKILL.md
src/xcfg/: __init__.py  errors.py  loader.py  spec.py
tests/: conftest.py  test_integration_shapes.py  test_layers.py  test_profiles.py  test_release_pipeline.py  test_skill.py  test_source_rules.py  test_validation.py
tools/: __init__.py  check_release_version.py
