[project]
name = "xcfg"
version = "0.2.0"
description = "Layered, profile-composable configuration micro-library. YAML layers, env overrides, pydantic validation."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Dariusz Debowczyk", email = "ddebowczyk@gmail.com"},
]
keywords = ["config", "configuration", "yaml", "pydantic", "settings", "profiles", "layered"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/cognesy/xcfg"
Repository = "https://github.com/cognesy/xcfg"
Changelog = "https://github.com/cognesy/xcfg/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-pyyaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xcfg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--strict-markers --strict-config"

[tool.mypy]
files = ["src", "tests"]
python_version = "3.10"
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["yaml.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "ANN"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN201", "ANN001"]
